# mdx23c-drum-separation

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
mdx23c/: __init__.py  audio_utils.py  cli.py  config.py  inference.py  model_hub.py  models.py
